# pleg

./: .gitignore  .gitmodules  CMakeLists.txt  Client  README.md  TODO  application.cpp  application.h  buffer.cpp  buffer.h  byte_array.cpp  byte_array.h  connection.cpp  connection.h  cursor.cpp  cursor.h  devices.json  event.cpp  event.h  exception.cpp  exception.h  factory.cpp  factory.h  files.cpp  files.h  files.json  gstreamer.cpp  gstreamer.h  gstreamer.json  install.sh  jsonconfig.cpp  jsonconfig.h  kicker.sh  launch.txt  lines.sh  log.cpp  log.h  logger.h  main.cpp  metatypes.h  (+38 more)
drumlin/: application.cpp  application.h  applicationbase.cpp  applicationbase.h  byte_array.cpp  connection.h  cursor.cpp  cursor.h  drumlin.cpp  drumlin.h  event.cpp  event.h  exception.cpp  iapplication.h  jsonconfig.cpp  jsonconfig.h  metatypes.h  mutexcall.h  object.cpp  object.h  registry.cpp  registry.h  signalhandler.cpp  socket.cpp  socket.h  tao_forward.h  thread.cpp  thread.h
gremlin/: compat.h
src/: buffer.cpp  buffer.h  drumlin  factory.cpp  factory.h  files.cpp  files.h  format.cpp  format.h  gstreamer.cpp  gstreamer.h  log.cpp  log.h  main.cpp  pleg.cpp  pleg.h  plegapp.cpp  plegapp.h  relevance.cpp  relevance.h  request.cpp  request.h  response.cpp  response.h  route.h  server.cpp  server.h  source.cpp  source.h  tao  test.cpp  test.h  transform.cpp  uri.cpp  uri.h  writer.cpp  writer.h
trx/: tx.c
webapp/: gulpfile.js  home.html  package.json  utils.js  webpack.config.js
webapp/resources/assets/js/: _d3.js  ajax.js  app-preload.js  app.js  binding.js  bootstrap.js  extend.js  fileupload.js  nodeextend.js  require-config.js  shim-tmpl.sh  shim.in  shim.out  simple-graph.js
webapp/resources/assets/js/components/: basiclistview.vue  chart.vue  collection.vue  controller.vue  log-detail.vue  video.vue
webapp/resources/assets/sass/: app.scss  style.scss
webapp/webpack_config/: dev.env.js  index.js
